Fixed text align issue in Portfolio

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -345,7 +345,7 @@ h6, .h6 {
 
 
 .home-header {
-  font-size: 54px;
+  font-size: 58px;
   margin-bottom: 20px;
 }
 
