--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -17,6 +17,7 @@ h6, .h6 {
 
 body p {
   font-family: 'Open Sans';
+  text-align: left;
 }
 
 .navbar {
